After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745339 - qtdemux: key_unit seek doesn't work
qtdemux: key_unit seek doesn't work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-28 17:12 UTC by Matej Knopp
Modified: 2015-03-02 00:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.50 KB, patch)
2015-02-28 17:12 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2015-02-28 17:12:13 UTC
Created attachment 298172 [details] [review]
Patch

gst_qtdemux_perform_seek looks for the GST_SEEK_FLAG_KEY_UNIT flag on segment, but GST_SEEK_FLAG_KEY_UNIT is not a segment flag. It needs to be passed as separate argument from gst_qtdemux_adjust_seek
Comment 1 Jan Schmidt 2015-03-01 11:04:05 UTC
Review of attachment 298172 [details] [review]:

You're right - GST_SEEK_FLAG_KEY_UNIT doesn't get copied to the segment, because it's only relevant when performing the seek.
Comment 2 Tim-Philipp Müller 2015-03-01 13:09:14 UTC
commit f75e443a7a0bd27b3e1935dd5e82a4e4e2498397
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Sat Feb 28 18:10:06 2015 +0100

    qtdemux: fix key unit seek
    
    Unlike many other seek flags, the KEY_UNIT seek
    flag is not copied over into the GstSegment,
    since it's only relevant for the seek itself,
    so we need to pass it explicitly to the seek
    handler here.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745339
Comment 3 Matej Knopp 2015-03-02 00:43:05 UTC
Sorry for missing explanation in the commit; I'll work on it :)